# alpha-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  coverage.json  main.py  pyproject.toml  pytest.ini  run_tests.sh
.claude_prd/: debug.md  debug_new_test_1.md  debug_test_cov_1.md  debug_test_cov_2.md  debug_test_cov_3.md  fundamental_update_issues.md  github_action_for_update.md  increase_test_cov_1.md  increase_test_cov_2.md
.github/: SECRETS.md
configs/: morningstar_to_gics.yaml  sec_mapping.yaml  storage.yaml
docs/: ALPHA-GUIDE.md  API.md  BACKTEST.md  CLI.md  CONCURRENCY_TUTORIAL.md  DEPRECATED_FIELDS_FIX.md  EVENTBRIDGE_TUTORIAL.md  EXAMPLE_LOG_OUTPUT.md  FIELDS.md  LAMBDA_TUTORIAL.md  NULL_CIK_HANDLING.md  OPERATORS.md  S3_DATA_LAKE_TUTORIAL.md  SKIPPED_COMPANIES_LOGGING.md  STORAGE.md  STRUCTURE.md  TESTING.md  _quarto.yml  cli.qmd  daily_updates.md  derived_fundamentals.md  fields.qmd  guide.qmd  index.qmd  operators.qmd  styles.css
examples/: crsp.py  fundamental_upload.py  symbol_name_change_examples.py
notebook/: alpaca.ipynb
plans/: 2025-02-17-phase1-implementation.md  2026-02-17-dsl-api-implementation.md  2026-02-18-alpha-correlation-design.md  2026-02-18-alpha-correlation-plan.md  2026-02-18-tutorial-qmd-conversion-design.md
reports/: benchmark_2026-02-27.json  benchmark_arithmetic.json  benchmark_baseline.json  benchmark_logical.json  benchmark_optimized.json  benchmark_vector.json
scripts/: benchmark_operators.py  build_security_master.py  crsp_figi.py  download_security_master.py  fetch_daily_ticks.py  fetch_daily_yfinance.py  (+10 more)
(+365 files in other folders)
