[project]
name = "alphalab"
version = "0.1.0"
description = "Local-first alpha research platform inspired by WorldQuant BRAIN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arelle-release>=2.36.0",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "rich>=14.3.2",
    "numba>=0.64.0",
]

[project.scripts]
alab = "alphalab.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "ipykernel>=7.2.0",
]

[tool.coverage.run]
omit = [
    "src/alphalab/cli.py",
    "src/alphalab/master/cli.py",
    "src/alphalab/storage/utils/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
